--- a/ProAcc/Views/ProjectMonitor/ValidationMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/ValidationMonitor.cshtml
@@ -122,7 +122,7 @@
     }
 </div>
 <script>
-    $(document).ready(function () {
+    @*$(document).ready(function () {
             $("#IDInstance").prop("disabled", true);
             $('#SubmitInstance').prop("disabled", true);
     });
@@ -245,6 +245,6 @@
 
             }
         });
-   });
+   });*@
 
 </script>
